--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -9,7 +9,7 @@
         Status<i class="icon-chevron-right indicate"></i></a></li>
 
       <li><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i>
-        WorkingTime Detail<i class="icon-chevron-right indicate"></i></a></li>
+        CircleTime Detail<i class="icon-chevron-right indicate"></i></a></li>
 
       <!-- <li number="8"><a menu="daily_dpv" href="#daily_dpv"><i class="icon-columns mark"></i> Daily DPV&SDPV<i class="icon-chevron-right indicate"></i></a></li>
        <li number="7"><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i> Daily FTQ<i class="icon-chevron-right indicate"></i></a></li>
@@ -196,7 +196,7 @@
 
     $('.my_icon').css({
         marginTop: (ClientHeight) / 2 + 'px',
-        marginBottom:((ClientHeight) / 2-33) + 'px'
+        marginBottom: ((ClientHeight) / 2 - 33) + 'px'
     });
 
     $('#pop-crate').css({
