--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -118,8 +118,12 @@
         $.get('/departments/entity_groups', {product_line: productLine, interval: datatype}, function (data) {
             $('.workstation').remove();
             for (var i = 0; i < data.length; i++) {
+                var box_title_id = "Line_" + productLine + "_interval_" + datatype + "_box_" + data[i].id;
+
+                console.log('====================');
+                console.log(box_title_id);
+                console.log('====================');
                 if (data[i].value > data[i].target_max || data[i].value < data[i].target_min) {
-                    var box_title_id = "Line_" + productLine + "_interval_" + datatype + "_box_" + data[i].id;
                     $('<div class="col-md-3 workstation"><div class="box">' +
                             '<div class="box-title" title="click to go history" id=' + box_title_id + ' onmouseover="box_title_mouseover(' + box_title_id + ');" onmouseout="box_title_mouseout(' + box_title_id + ');">' + data[i].name + '<i class="icon-list mark pull-right"></i></div><div style="display:inline-flex;width: 100%;" title="double click go to analytics" ondblclick="double_click(' + box_title_id + ');"><div class="left-number" style="color: #ff0000;">' + data[i].value + '</div>' +
                             '<div class="right-content"><div class="content"><strong>' + data[i].target_max + '</strong><p>Max Target</p></div>' +
@@ -187,7 +191,7 @@
             if (window.localStorage) {
                 localStorage.box_msg = over_id;
                 localStorage.box_name = over_id_name;
-                localStorage.pre_url=document.location.href; 
+                localStorage.pre_url = document.location.href;
                 window.location.href = 'reports#defects';
                 location.reload();
             } else {
