--- a/app/views/reports/_demo.html.erb
+++ b/app/views/reports/_demo.html.erb
@@ -98,17 +98,21 @@
     // 固定不变
     var box_name = localStorage.box_name;
     var box_msg = localStorage.box_msg;
-    var pre_url=localStorage.pre_url;
+    var pre_url = localStorage.pre_url;
 
-    function go_back(){
-        try{
-            var error_url=pre_url.split('#')[1];
-            if(pre_url=='undefined'||error_url=='defects'){
-                pre_url=window.location.host+'/reports#current_status'
+    function go_back() {
+        console.log('-----------------');
+        console.log(pre_url);
+        console.log('-----------------');
+
+        try {
+            var error_url = pre_url.split('#')[1];
+            if (pre_url == 'undefined' || error_url == 'defects') {
+                pre_url = window.location.host + '/reports#current_status'
             }
-            window.location.href=pre_url;
+            window.location.href = pre_url;
             location.reload();
-        }catch(e){
+        } catch (e) {
             console.log(e);
         }
     }
@@ -119,7 +123,7 @@
 
     // var pre_time='2016-03-24 16:00:00';
     // var pre_time = new Date().getFullYear()+'-'+(new Date().getMonth()+1)+'-'+new Date().getDate()+' '+'00:00:00';
-    var pre_time=new Date().format('yyyy-MM-dd').toString()+' '+'00:00:00';
+    var pre_time = new Date().format('yyyy-MM-dd').toString() + ' ' + '00:00:00';
 
     // pre_time=new Date(pre_time).format('yyyy-MM-dd hh:mm:ss');
     // var current_time='2016-03-24 17:00:00';
@@ -251,7 +255,7 @@
             plotOptions: {
                 series: {
                     stickyTracking: false,
-                    turboThreshold:0 //不限制数据点个数
+                    turboThreshold: 0 //不限制数据点个数
                 }
             },
             series: [{
@@ -348,14 +352,12 @@
             if (SearchHistoryDataValue.length == 0) {
                 alert('This period of time there is no data, modify the query date.');
             } else {
-                console.log(SearchHistoryDataValue.length);
-                console.log(SearchHistoryDataValue);
                 loadHistoryDataFun(SearchHistoryDataName, SearchHistoryDataValue);
             }
         })
 
     });
-    
+
     /*get data*/
     function GetHistoryDataFun(id, start_time, end_time) {
         var GetHistoryData = "";
