--- a/app/views/reports/_demo.html.erb
+++ b/app/views/reports/_demo.html.erb
@@ -98,20 +98,17 @@
     // 固定不变
     var box_name = localStorage.box_name;
     var box_msg = localStorage.box_msg;
-    var pre_url = localStorage.pre_url;
+    var change_pre_url = localStorage.pre_url;
 
     function go_back() {
-        console.log('-----------------');
-        console.log(pre_url);
-        console.log('-----------------');
-
         try {
-            var error_url = pre_url.split('#')[1];
-            if (pre_url == 'undefined' || error_url == 'defects') {
-                pre_url = window.location.host + '/reports#current_status'
+            if (change_pre_url == 'undefined') {
+                change_pre_url = window.location.host + '/reports#current_status';
+            } else if (change_pre_url.split('#')[1] == "defects") {
+                change_pre_url = window.location.host + '/reports#current_status';
             }
-            window.location.href = pre_url;
-            location.reload();
+            window.location.href = '/reports#' + change_pre_url.split('#')[1];
+            window.location.reload();
         } catch (e) {
             console.log(e);
         }
@@ -354,14 +351,14 @@
             } else {
                 loadHistoryDataFun(SearchHistoryDataName, SearchHistoryDataValue);
             }
-        })
+        });
 
     });
 
     /*get data*/
     function GetHistoryDataFun(id, start_time, end_time) {
         var GetHistoryData = "";
-        show_loading(70, 0, 0, 10);
+        show_loading(145, 0, 0, 0);
         $.ajax({
             url: '/departments/entity_group_history',
             type: 'get',
