--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -11,6 +11,16 @@
       <li><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i>
         CycleTime Detail<i class="icon-chevron-right indicate"></i></a></li>
 
+      <li><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i>
+        CycleTime Detail<i class="icon-chevron-right indicate"></i></a></li>
+
+      <li><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i>
+        CycleTime Detail<i class="icon-chevron-right indicate"></i></a></li>
+
+      <li><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i>
+        CycleTime Detail<i class="icon-chevron-right indicate"></i></a></li>
+
+
       <!--<li><a menu="defects" href="#defects"><i class="icon-list mark"></i>
         History<i class="icon-chevron-right indicate"></i></a></li>-->
 
