--- a/app/views/reports/_demo.html.erb
+++ b/app/views/reports/_demo.html.erb
@@ -173,19 +173,20 @@
 
         // 循环添加数据
         var data_entry_at_format_all = "";
-        var data_entry_at_format_date = "";
+        var data_entry_at_format_all_date = new Array();
         for (var i = 0; i < HistoryData.length; i++) {
             var data_id = HistoryData[i].id;
             var data_value = HistoryData[i].value;
 
             var data_entry_at = HistoryData[i].entry_at;
             data_entry_at_format_all = new Date(data_entry_at).format('yyyy-MM-dd hh:mm:ss');
-            data_entry_at_format_date = new Date(data_entry_at).format('yyyy-MM-dd');
+            data_entry_at_format_all_date.push(data_entry_at_format_all);
+
             var data_entry_at_format = new Date(data_entry_at).format('hh:mm:ss');
             xAxis_value.push(data_entry_at_format);
 
             var data_target_max = HistoryData[i].target_max;
-            history_target_max.push(data_target_max);
+            history_target_max.push({id: data_entry_at_format_all_date[i], y: data_target_max});
 
             var data_target_min = HistoryData[i].target_min;
 
@@ -197,12 +198,12 @@
 
             var data_value = HistoryData[i].value;
             if (data_value > data_target_max) {
-                history_value.push({color: '#ff0000', y: data_value});
+                history_value.push({id: data_entry_at_format_all_date[i], color: '#ff0000', y: data_value});
                 $('<td style="background:#ff0000;">' + data_value + '</td>').appendTo('.history_table_tbody_value').ready(function () {
                 });
                 abnormal_data++;
             } else {
-                history_value.push({color: 'limegreen', y: data_value});
+                history_value.push({id: data_entry_at_format_all_date[i], color: 'limegreen', y: data_value});
                 $('<td style="background:limegreen;">' + data_value + '</td>').appendTo('.history_table_tbody_value').ready(function () {
                 });
                 normal_data++;
@@ -241,8 +242,7 @@
             },
             tooltip: {
                 formatter: function () {
-                    return '<span><b>' + data_entry_at_format_date + ' ' + this.x +
-                            '</b><br/>Value: <b>' + this.y + ' s</b><span>';
+                    return '<span><b>' + this.point.id + '</b><br/>Value: <b>' + this.y + ' s</b><span>';
                 }
             },
             scrollbar: {
