--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -11,15 +11,24 @@
       <li><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i>
         CycleTime Detail<i class="icon-chevron-right indicate"></i></a></li>
 
-      <li><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i>
-        CycleTime Detail<i class="icon-chevron-right indicate"></i></a></li>
+      <!-- <li><a menu="wait_time_in_hours" href="#wait_time_in_hours"><i class="icon-lock mark"></i>
+         WaitTime in Hours<i class="icon-chevron-right indicate"></i></a></li>
 
-      <li><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i>
-        CycleTime Detail<i class="icon-chevron-right indicate"></i></a></li>
+       <li><a menu="cycle_time_in_hours" href="#cycle_time_in_hours"><i class="icon-time mark"></i>
+         CycleTime in Hours<i class="icon-chevron-right indicate"></i></a></li>
 
-      <li><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i>
-        CycleTime Detail<i class="icon-chevron-right indicate"></i></a></li>
+       <li><a menu="working_time_in_hours" href="#working_time_in_hours"><i class="icon-calendar mark"></i>
+         WorkingTime in Hours<i class="icon-chevron-right indicate"></i></a></li>
 
+ -->
+      <li><a menu="wait_time_in_hours" href="#daily_ftq"><i class="icon-lock mark"></i>
+        WaitTime in Hours<i class="icon-chevron-right indicate"></i></a></li>
+
+      <li><a menu="cycle_time_in_hours" href="#daily_ftq"><i class="icon-time mark"></i>
+        CycleTime in Hours<i class="icon-chevron-right indicate"></i></a></li>
+
+      <li><a menu="working_time_in_hours" href="#daily_ftq"><i class="icon-calendar mark"></i>
+        WorkingTime in Hours<i class="icon-chevron-right indicate"></i></a></li>
 
       <!--<li><a menu="defects" href="#defects"><i class="icon-list mark"></i>
         History<i class="icon-chevron-right indicate"></i></a></li>-->
@@ -46,17 +55,6 @@
     <i class="icon-chevron-left" title="Close Panel"></i>
   </div>
 </div>
-
-<!--
-<div class="report-menu" id="report-menu">
-  <section>
-
-    <div id="pop-crate" isopen="true" style="float: left;left: 0;text-align: left; color: white;cursor: pointer;width: 20px;height: 20px;position: fixed;">
-      <i class="icon-chevron-left" title="收起面板"></i>
-    </div>
-
-  </section>
-</div>-->
 
 <div id="preloader" class="pageload-overlay" data-opening="M20,15 50,30 50,30 30,30 Z;M0,0 80,0 50,30 20,45 Z;M0,0 80,0 60,45 0,60 Z;M0,0 80,0 80,60 0,60 Z" data-closing="M0,0 80,0 60,45 0,60 Z;M0,0 80,0 50,30 20,45 Z;M20,15 50,30 50,30 30,30 Z;M30,30 50,30 50,30 30,30 Z">
   <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 80 60" preserveAspectRatio="none">
@@ -219,7 +217,6 @@
     });
 
     $('#pop-crate').css({
-//        height: (ClientHeight - 70) + 'px',
         bottom: '0px'
     });
 
@@ -254,6 +251,4 @@
         $('<div id="preloader" class="pageload-overlay" data-opening="M20,15 50,30 50,30 30,30 Z;M0,0 80,0 50,30 20,45 Z;M0,0 80,0 60,45 0,60 Z;M0,0 80,0 80,60 0,60 Z" data-closing="M0,0 80,0 60,45 0,60 Z;M0,0 80,0 50,30 20,45 Z;M20,15 50,30 50,30 30,30 Z;M30,30 50,30 50,30 30,30 Z"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 80 60" preserveAspectRatio="none"><path d="M30,30 50,30 50,30 30,30 Z"/></svg></div>').appendTo('body').ready(function () {
         })
     }
-
-    // window.setTimeout('refersh()',20000);
 </script>
