hot code from beko

--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -4,7 +4,7 @@
       <div class="col-sm-4" style="padding-top: 10px;border-right: 1px solid #ccc;">
         <label>Condition</label>
 
-        <p>CircleTime Current Status Block Chart</p>
+        <p>CycleTime Current Status Block Chart</p>
 
         <p id="current-date" style="font-size: 12px;"></p>
       </div>
