--- a/app/views/reports/_defects.html.erb
+++ b/app/views/reports/_defects.html.erb
@@ -1,118 +1,1 @@
-<div id="defects" class="data_container" >
-</div>
-<script>
-$(document).ready(function(){
-	var width = 70;
-	var widthstring = "";
-	var alienstring = "";
-	var coltypestring = "";
-	var colsortstring = "";
-	var headers = "Model Group,VIN,NAME,Level 1,Level 2,Level3,Level4,Level5,Fault Description" +
-            ",Station,Rank,Res.Dep,Inspector,repaired by,confirmed by,input date/time,Shift,Package code,Pilot";
-    var length = headers.split(",").length;
-	for(var i = 0;i<length;i++){
-		if(i<18){
-			alienstring = alienstring+"center,"
-			widthstring = widthstring+width+",";
-			coltypestring = coltypestring + "ro,";
-			colsortstring = colsortstring + "str,";
-		}else{
-			alienstring = alienstring+"center";
-			widthstring = widthstring+width;
-			coltypestring = coltypestring + "ro";
-            colsortstring = colsortstring + "str";
-		}
-		
-	}
-
-	var defectsgrid = new dhtmlXGridObject("defects");
-    defectsgrid.setImagePath("/assets/dhtmlx/");
-    defectsgrid.setHeader(headers);
-    defectsgrid.setInitWidths(widthstring);
-    defectsgrid.enableAutoWidth(false);
-
-    defectsgrid.setColAlign(alienstring);
-    defectsgrid.setColTypes(coltypestring);
-    defectsgrid.setColSorting(coltypestring);
-    defectsgrid.setSkin("dhx_skyblue");
-    defectsgrid.setColumnColor("#d5f1ff");
-    defectsgrid.enableSmartRendering(true);
-    defectsgrid.init();
-
-    var data = {
-        rows:[{
-            id:"1",
-            data:[
-            ]
-        }]
-    };
-
-    var stations = ["BBO","PBO","DBO","IBO","MTR","INT","TBO","MCH","CBO","U/H","EXT","ELE","GBO","ROL","SHT","OKL","ROD","EOL"];
-
-    for(var i = 0;i<100;i++){
-        data["rows"][i] ={
-            id: i+1,
-            data: [
-                RAND.enum(["CF11","CF14","CF16"]),
-                'LXXXXXXXXXXXXX',
-                'XXXX',
-                RAND.enum(["仪表盘","内饰","制动系统","发动机仓"]),
-                RAND.enum(["保险丝盒","发动机","左前轮","右前轮","侧饰版"]),
-                RAND.enum(["支架","右出风口","左出风口","侧围","ABS传感器","制动硬管","ECM"]),
-                RAND.enum(["螺母","风向调节器","右","左","线束","密封","支架"]),
-                RAND.enum(["螺母","罩","螺钉","推紧销","卡子","卡筛"]),
-                RAND.enum(["高扭矩","位置不当","过紧","错","损伤","松","焊接不良","短缺","装配不到位","装配错","角度错"]),
-                RAND.enum(stations),
-                RAND.enum(["A","B","C"]),
-                RAND.enum(["GA","BS","D&C"," "]),
-                RAND.enum(["Jack","John","Mike"]),
-                RAND.enum(["Alan","Kobe","Josh"]),
-                RAND.enum(["Joe","Brady","Chris"]),
-                RAND.time("2014/9/1","2014/9/20"),
-                RAND.enum(["E","L"]),
-                "XXXXXXXXXXXXXXXX",
-                RAND.enum(["N","Y"])
-            ]
-        };
-    };
-
-    var keydata = {
-        rows:[{
-            id:"1",
-            data:[
-            ]
-        }]
-    };
-
-    var key_stations = ["iQ1","iQ2","iQ11","EOL"];
-    for(var i = 0;i<100;i++){
-        keydata["rows"][i] ={
-            id: i+1,
-            data: [
-                RAND.enum(["CF11","CF14","CF16"]),
-                'LXXXXXXXXXXXXX',
-                'XXXX',
-                RAND.enum(["仪表盘","内饰","制动系统","发动机仓"]),
-                RAND.enum(["保险丝盒","发动机","左前轮","右前轮","侧饰版"]),
-                RAND.enum(["支架","右出风口","左出风口","侧围","ABS传感器","制动硬管","ECM"]),
-                RAND.enum(["螺母","风向调节器","右","左","线束","密封","支架"]),
-                RAND.enum(["螺母","罩","螺钉","推紧销","卡子","卡筛"]),
-                RAND.enum(["高扭矩","位置不当","过紧","错","损伤","松","焊接不良","短缺","装配不到位","装配错","角度错"]),
-                RAND.enum(key_stations),
-                RAND.enum(["A","B","C"]),
-                RAND.enum(["GA","BS","D&C"," "]),
-                RAND.enum(["Jack","John","Mike"]),
-                RAND.enum(["Alan","Kobe","Josh"]),
-                RAND.enum(["Joe","Brady","Chris"]),
-                RAND.time("2014/9/1","2014/9/20"),
-                RAND.enum(["E","L"]),
-                "XXXXXXXXXXXXXXXX",
-                RAND.enum(["N","Y"])
-            ]
-        };
-    };
-
-    defectsgrid.clearAll();
-    defectsgrid.parse(keydata,'json');
-});
-</script>
+<div id="defects" class="data_container"></div>
