--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -49,55 +49,6 @@
     </div>
     <div id="data_container" class="data-container"></div>
   </section>
-
-  <!--
-
-    <section id="current-status-target" class='current-status-wrapper'>
-      <div class="wrapper-header" id="target-wrapper-header">
-        <a class="back-btn current-status-target-back-btn"><span>FTQ  Summary  Percentage</span></a>
-
-        <p>Target setting</p>
-      </div>
-      <div id="target-setting-footer" class="target-setting-footer">
-        <div class="footer-left">
-          <p>Condition</p>
-
-          <p>When Target higher than current FTQ</p>
-
-          <p>When Target equal to current FTQ</p>
-
-          <p>When Target lower than current FTQ</p>
-        </div>
-        <div class="footer-right" id="footer-right">
-          <p>Color</p>
-          <label>FTQ color setting</label>
-        </div>
-      </div>
-      <div id="target_setting" class="wrapper-current-body"></div>
-    </section>
-    <section id="current-status-all-defects" class='current-status-wrapper'>
-      <div class="wrapper-header">
-        <a class="back-btn current-status-target-back-btn"><span>FTQ  Summary  Percentage</span></a>
-
-        <p>All defects</p>
-      </div>
-      <div class="wrapper-current-body">
-        <div id="all_defects" class="data_container"></div>
-      </div>
-    </section>
-    <section id="current-status-key-defects" class='current-status-wrapper'>
-      <div class="wrapper-header">
-        <a class="back-btn current-status-target-back-btn"><span>FTQ  Summary  Percentage</span></a>
-
-        <p>Key station defects</p>
-      </div>
-      <div class="wrapper-current-body">
-        <div id="key_defects" class="data_container"></div>
-      </div>
-    </section>
-
-  -->
-
 </section>
 
 <% content_for :javascript_includes do %>
@@ -116,9 +67,6 @@
                 $(this).css({opacity: '1'});
                 $(this).attr('datatype', 'true');
 
-                // console.log($(this).attr('interval'));
-                // console.log($('#vehicle-select').val());
-
                 var Choose_Interval_Code = $(this).attr('interval');
                 var ProductLine = $('#vehicle-select').val();
                 $.ajax({
@@ -129,11 +77,7 @@
                         product_line: ProductLine
                     },
                     success: function (data) {
-                        console.log(data);
                         //Here can do something
-                        console.log('data====');
-                        console.log(data);
-                        console.log('data====');
                         loading_hide();
                     },
                     error: function () {
@@ -169,30 +113,24 @@
             }
         });
 
-        console.log(productLine);
         loading_show();
 
         $.get('/departments/entity_groups', {product_line: productLine, interval: datatype}, function (data) {
-            console.log(data);
             $('.workstation').remove();
             for (var i = 0; i < data.length; i++) {
-
-                // console.log(data[i].value);
-                // console.log(data[i].target_max);
-                // console.log(data[i].target_min);
-
                 if (data[i].value > data[i].target_max || data[i].value < data[i].target_min) {
-                    $('<div class="col-md-3 workstation"><div class="box" ondblclick="double_click();">' +
-                    '<div class="box-title">' + data[i].name + '</div><div style="display:inline-flex;width: 100%;"><div class="left-number" style="color: #ff0000;">' + data[i].value + '</div>' +
-                    '<div class="right-content"><div class="content"><strong>' + data[i].target_max + '</strong><p>Max Target</p></div>' +
-                    '<div class="content"><strong>' + data[i].target_min + '</strong><p>Min Target</p></div></div></div></div></div>').appendTo('#data_container').ready(function () {
+                    var box_title_id = "Line_" + productLine + "_interval_" + datatype + "_box_" + data[i].id;
+                    $('<div class="col-md-3 workstation"><div class="box">' +
+                            '<div class="box-title" title="click to go history" id=' + box_title_id + ' onmouseover="box_title_mouseover(' + box_title_id + ');" onmouseout="box_title_mouseout(' + box_title_id + ');">' + data[i].name + '<i class="icon-list mark pull-right"></i></div><div style="display:inline-flex;width: 100%;" title="double click return to analytics" ondblclick="double_click(' + box_title_id + ');"><div class="left-number" style="color: #ff0000;">' + data[i].value + '</div>' +
+                            '<div class="right-content"><div class="content"><strong>' + data[i].target_max + '</strong><p>Max Target</p></div>' +
+                            '<div class="content"><strong>' + data[i].target_min + '</strong><p>Min Target</p></div></div></div></div></div>').appendTo('#data_container').ready(function () {
                         loading_hide();
                     });
                 } else {
-                    $('<div class="col-md-3 workstation"><div class="box" ondblclick="double_click();">' +
-                    '<div class="box-title">' + data[i].name + '</div><div style="display:inline-flex;width: 100%;"><div class="left-number"style="color: #3ed436;">' + data[i].value + '</div>' +
-                    '<div class="right-content"><div class="content"><strong>' + data[i].target_max + '</strong><p>Max Target</p></div>' +
-                    '<div class="content"><strong>' + data[i].target_min + '</strong><p>Min Target</p></div></div></div></div></div>').appendTo('#data_container').ready(function () {
+                    $('<div class="col-md-3 workstation"><div class="box">' +
+                            '<div class="box-title" title="click to go history" id=' + box_title_id + ' onmouseover="box_title_mouseover(' + box_title_id + ');" onmouseout="box_title_mouseout(' + box_title_id + ');">' + data[i].name + '<i class="icon-list mark pull-right"></i></div><div style="display:inline-flex;width: 100%;" title="double click return to analytics" ondblclick="double_click(' + box_title_id + ');"><div class="left-number"style="color: #3ed436;">' + data[i].value + '</div>' +
+                            '<div class="right-content"><div class="content"><strong>' + data[i].target_max + '</strong><p>Max Target</p></div>' +
+                            '<div class="content"><strong>' + data[i].target_min + '</strong><p>Min Target</p></div></div></div></div></div>').appendTo('#data_container').ready(function () {
                         loading_hide();
                     });
                 }
@@ -203,17 +141,65 @@
     $("#vehicle-select").change(function () {
         loadData();
     });
+
     try {
         window.clearInterval(loadChartDataIntervalValue);
     } catch (e) {
         console.log(e);
     }
-    var loadDataIntervalValue = window.setInterval("loadData()", 20000);
+
+    //    var loadDataIntervalValue = window.setInterval("loadData()", 20000);
+
+    /*20s 刷新太快*/
+    var loadDataIntervalValue = window.setInterval("loadData()", 60000);
 
     /*双击事件*/
-    function double_click() {
-        window.location.href = 'kpi_entries/analyse?view=' + $(this).children('div');
+    function double_click(ele) {
+        var double_click_id = $(ele).attr('id');
+        var ProductLine = double_click_id.split('_')[1];
+        var Interval = double_click_id.split('_')[3];
+        var BoxID = double_click_id.split('_')[5];
+
+        /* console.log(ProductLine);
+         console.log(Interval);
+         console.log(BoxID);
+         */
+        var double_click_content = $(ele).html();
+        var double_click_name = double_click_content.split('<i')[0];
+//        console.log(double_click_name);
+
+        window.location.href = 'kpi_entries/analyse?view=';
     }
+
+    /*查看历史记录数据*/
+    function box_title_mouseover(ele) {
+        var over_id = $(ele).attr('id');
+        var ProductLine = over_id.split('_')[1];
+        var Interval = over_id.split('_')[3];
+        var BoxID = over_id.split('_')[5];
+
+        var over_id_content = $(ele).html();
+        var over_id_name = over_id_content.split('<i')[0];
+
+        $('#' + over_id).children('i').fadeIn(400);
+
+        $('#' + over_id).click(function () {
+            if (window.localStorage) {
+                localStorage.box_msg = over_id;
+                localStorage.box_name = over_id_name;
+                window.location.href = 'reports#defects';
+                location.reload();
+            } else {
+                alert('This browser does NOT support localStorage,please change browser.');
+            }
+        });
+    }
+
+    function box_title_mouseout(ele) {
+        var over_id = $(ele).attr('id');
+        $('#' + over_id).children('i').fadeOut(400);
+    }
+
 </script>
 
 <style>
@@ -225,7 +211,6 @@
         /*border: 2px solid #9000ff;*/
         border: 2px solid deepskyblue;
         margin: 10px;
-        cursor: pointer;
     }
 
     .box-title {
@@ -237,6 +222,16 @@
         text-align: center;
         border-top-right-radius: 7px;
         border-top-left-radius: 7px;
+        padding-left: 30px;
+        cursor: pointer;
+    }
+
+    .box-title > i {
+        font-size: .8em;
+        display: none;
+        margin-top: 10px;
+        margin-right: 5px;
+        color: lightblue;
     }
 
     .left-number {
